--- a/server/docker-compose.dev.yml
+++ b/server/docker-compose.dev.yml
@@ -1,11 +1,49 @@
 version: "3"
 
 services:
-  app:
+  node:
     build:
       context: ./app
       dockerfile: Dockerfile.dev
+    container_name: app
+    env_file:
+      - .env
     volumes:
       - ./app:/usr/src/app
     ports:
-      - "3000:3000"
+      - ${SRV_PORT}:${SRV_PORT}
+    expose:
+      - ${SRV_PORT}
+    depends_on:
+      - mongodb
+    environment:
+      - NODE_ENV=development
+    links:
+      - mongodb
+      - mosquitto
+  mongodb:
+    image: mongo:latest
+    container_name: database
+    restart: unless-stopped
+    command: --auth
+    ports:
+      - 27017:27017
+    expose:
+      - "27017"
+    #logging:
+    #driver: none
+    env_file:
+      - .env
+    volumes:
+      - ./docker-entrypoint-initdb.d/mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
+  mosquitto:
+    image: eclipse-mosquitto:latest
+    container_name: broker
+    ports:
+      - 1883:1883
+    expose:
+      - "1883"
+
+volumes:
+  db_data:
+    driver: local
